--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -81,6 +81,63 @@ aside {
   border-bottom: 5px solid #1098ad;
 }
 
-body {
-  /* background-color: orangered; */
+/* body {
+  background-color: orangered;
+} */
+
+/* .first-li{
+  font-weight: bold;
+} */
+
+li:first-child {
+  font-weight: bold;
 }
+
+li:last-child {
+  font-style: italic;
+}
+
+/* li:nth-child(even) {
+  color: red;
+} */
+
+/* This will work, since p is NOT the first child of article */
+article p:first-child {
+  color: red;
+}
+
+/* This will work, since p is the last child of article */
+article p:last-child {
+  color: red;
+}
+
+/* However this will work for the first child */
+
+article p:first-of-type {
+  color: red;
+}
+
+/* Styling links */
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  /* color: #777; */
+  color: #1098ad;
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline orangered;
+}
+
+a:active {
+  background-color: black;
+  font-style: italic;
+}
+
+/* LVHA */
