--- a/starter/02-HTML-Fundamentals/challenge2/style.css
+++ b/starter/02-HTML-Fundamentals/challenge2/style.css
@@ -1,19 +1,27 @@
+/* Global reset */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
 }
 
-/* Classes */
-
-.product-title {
-  background-color: #f7f7f7;
-  font-size: 22px;
-  text-align: center;
-  text-transform: uppercase;
+.product {
+  border: 4px solid black;
+  margin: 50px auto;
+  width: 825px;
 }
 
-.product {
-  border: solid 4px;
+.product-title {
+  background-color: #ddd;
+  font-size: 22px;
+  padding: 15px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .price {
@@ -24,7 +32,12 @@ body {
   color: #777;
   font-size: 12px;
   font-weight: bold;
+  margin-bottom: 20px;
   text-transform: uppercase;
+}
+
+.description {
+  margin-bottom: 10px;
 }
 
 .more-info:link,
@@ -39,11 +52,18 @@ body {
 
 .details-title {
   font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
   text-transform: uppercase;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
 }
 
 /* Button */
@@ -51,10 +71,13 @@ body {
 .add-cart {
   background-color: black;
   border: none;
+  border-top: 4px solid black;
   color: white;
   cursor: pointer;
   font-size: 20px;
+  padding: 15px;
   text-transform: uppercase;
+  width: 100%;
 }
 
 .add-cart:hover {
