--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -3,6 +3,8 @@
   padding: 0;
 }
 
+/* Page sections */
+
 body {
   color: #444;
   font-family: sans-serif;
@@ -24,7 +26,7 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
@@ -48,6 +50,8 @@ aside {
   padding: 50px 0;
   width: 500px;
 }
+
+/* Smaller elements */
 
 h1,
 h2,
@@ -93,6 +97,7 @@ ol {
 li {
   font-size: 20px;
   margin-bottom: 10px;
+  /* display: inline; */
 }
 
 li:last-child {
@@ -189,6 +194,20 @@ a:active {
 .post-img {
   height: auto;
   width: 100%;
+}
+
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
 }
 
 /* Resolving conflicts */
