--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,3 +1,5 @@
+/* Reset */
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +10,7 @@
 body {
   color: #444;
   font-family: sans-serif;
+  position: relative;
 }
 
 /* Centerering the site using a container div */
@@ -17,6 +20,7 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+  /* position: relative; */
 }
 
 .main-header {
@@ -31,6 +35,7 @@ body {
 
 nav {
   font-size: 18px;
+  text-align: center;
 }
 
 article {
@@ -39,6 +44,7 @@ article {
 
 .post-header {
   margin-bottom: 40px;
+  /* position: relative; */
 }
 
 aside {
@@ -68,6 +74,7 @@ h1 {
 h2 {
   font-size: 40px;
   margin-bottom: 30px;
+  position: relative;
 }
 
 h3 {
@@ -150,15 +157,15 @@ li:last-child {
   color: red;
 } */
 
-/* This will work, since p is NOT the first child of article */
+/* This will not work, since p is NOT the first child of article */
 article p:first-child {
   color: red;
 }
 
 /* This will work, since p is the last child of article */
-article p:last-child {
+/* article p:last-child {
   color: red;
-}
+} */
 
 /* However this would work for the first child */
 
@@ -208,6 +215,45 @@ nav a:link {
 
 nav a:link:last-child {
   margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+/* Pseudo elements */
+
+button:first-letter {
+  color: red;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+/* h3 + p::first-line {
+  color: red;
+} */
+
+/* display:inline-block to make padding apply, since the :after pseudo element is inline by default */
+
+h2::after {
+  content: 'TOP';
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-size: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
 }
 
 /* Resolving conflicts */
