--- a/starter/02-HTML-Fundamentals/challenge2/style.css
+++ b/starter/02-HTML-Fundamentals/challenge2/style.css
@@ -14,6 +14,7 @@ body {
   border: 4px solid black;
   margin: 50px auto;
   width: 825px;
+  position: relative;
 }
 
 .product-title {
@@ -43,6 +44,8 @@ body {
 .more-info:link,
 .more-info:visited {
   color: black;
+  margin-bottom: 30px;
+  display: inline-block;
 }
 
 .more-info:hover,
@@ -83,4 +86,43 @@ body {
 .add-cart:hover {
   background-color: white;
   color: black;
+}
+
+/* Challenge #3 */
+
+.sale {
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px 10px;
+  letter-spacing: 2px;
+  position: absolute;
+  top: -14px;
+  left: -32px;
+}
+
+.color {
+  padding: 10px;
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.black {
+  background-color: black;
+}
+.blue {
+  background-color: blue;
+}
+.red {
+  background-color: red;
+}
+.yellow {
+  background-color: yellow;
+}
+.green {
+  background-color: green;
+}
+.brown {
+  background-color: brown;
 }
