--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -17,24 +17,17 @@ body {
 
 .container {
   width: 1200px;
-  /* margin-left: auto;
-  margin-right: auto; */
   margin: 0 auto;
 }
 
 .main-header {
   background-color: #f7f7f7;
-  /* padding: 20px;
-  padding-left: 40px;
-  padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
-  /* height: 80px; */
 }
 
 nav {
   font-size: 18px;
-  /* text-align: center; */
 }
 
 article {
@@ -43,7 +36,6 @@ article {
 
 .post-header {
   margin-bottom: 40px;
-  /* position: relative; */
 }
 
 aside {
@@ -106,15 +98,7 @@ li:last-child {
   margin-bottom: 0;
 }
 
-/* footer p {
-  font-size: 16px;
-} */
-
-/* article header p {
-  font-style: italic;
-} */
-
-#author {
+.author {
   font-style: italic;
   font-size: 18px;
 }
@@ -169,7 +153,6 @@ a:link {
 }
 
 a:visited {
-  /* color: #777; */
   color: #1098ad;
 }
 
@@ -183,7 +166,7 @@ a:active {
   background-color: black;
   font-style: italic;
 }
-/* LVHA */
+/* L(ink)V(isited)H(over)A(active) */
 
 .post-img {
   width: 100%;
@@ -191,14 +174,8 @@ a:active {
 }
 
 nav a:link {
-  /* background-color: orangered;
-  margin: 20px;
-  padding: 20px;
-
-  display: block; */
-
+  /* background-color: orangered;*/
   margin-right: 30px;
-  margin-top: 10px;
   display: inline-block;
 }
 
@@ -210,10 +187,7 @@ button {
   font-size: 22px;
   padding: 20px;
   cursor: pointer;
-
   position: absolute;
-  /* top: 50px;
-  left: 50px; */
   bottom: 50px;
   right: 50px;
 }
@@ -245,7 +219,6 @@ h2::before {
   right: -25px;
 }
 
-/* Resolving conflicts */
 /* #copyright {
   color: red;
 }
@@ -262,56 +235,58 @@ footer p {
   color: green !important;
 } */
 
-/* nav a:link,
-nav p {
-  font-size: 18px;
-} */
+/* FLEXBOX */
 
-/* FLOATS */
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-.author-img {
-  float: left;
-  margin-bottom: 20px;
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  gap: 15px;
 }
 
 .author {
-  float: left;
-  margin-top: 10px;
-  margin-left: 20px;
+  margin-bottom: 0;
 }
 
-h1 {
-  float: left;
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
 }
 
-nav {
-  float: right;
+.related-author {
+  margin-bottom: 0;
+  font-weight: normal;
+  font-style: italic;
 }
 
-/* Clearing an empty div */
-
-.clear {
-  clear: both;
-}
-
-/* Instead of inserting an empty div */
-
-.clearfix::after {
-  clear: both;
-  content: '';
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
   display: block;
+  margin-bottom: 5px;
+}
+
+.row {
+  display: flex;
+  gap: 75px;
+  margin-bottom: 60px;
+  align-items: flex-start;
 }
 
 article {
-  width: 825px;
-  float: left;
+  flex: 1;
+  margin-bottom: 0;
 }
 
 aside {
-  width: 300px;
-  float: right;
-}
-
-footer {
-  clear: both;
+  flex: 0 0 300px;
 }
