--- a/starter/02-HTML-Fundamentals/challenge2/style.css
+++ b/starter/02-HTML-Fundamentals/challenge2/style.css
@@ -1,5 +1,3 @@
-/* Global reset */
-
 * {
   margin: 0;
   padding: 0;
@@ -11,39 +9,77 @@ body {
   line-height: 1.4;
 }
 
+clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.container {
+  display: flex;
+  gap: 40px;
+}
+
+/* PRODUCT */
+
 .product {
   border: 4px solid black;
+  /* width: 825px; small gap between button and border */
+  width: 826px;
   margin: 50px auto;
-  width: 825px;
   position: relative;
 }
 
 .product-title {
-  background-color: #ddd;
-  font-size: 22px;
-  padding: 15px;
   text-align: center;
+  font-size: 22px;
   text-transform: uppercase;
+  background-color: #ddd;
+  padding: 15px;
+}
+
+/* PRODUCT INFORMATION */
+
+.product-info {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+  margin-top: 20px;
+}
+
+.product-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .price {
   font-size: 24px;
-  float: left;
 }
 
 .shipping {
-  color: #777;
   font-size: 12px;
-  font-weight: bold;
-  margin-bottom: 20px;
   text-transform: uppercase;
-  float: right;
-  margin-top: 8px;
+  font-weight: bold;
+  color: #777;
 }
 
-.description {
+.sale {
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 7px 15px;
+  position: absolute;
+  top: -17px;
+  left: -38px;
+}
+
+.product-description {
   margin-bottom: 10px;
-  /* clear: both; */
 }
 
 .more-info:link,
@@ -58,10 +94,50 @@ body {
   text-decoration: none;
 }
 
+.product-colors {
+  display: flex;
+  gap: 10px;
+}
+
+.color {
+  background-color: #000;
+  height: 22px;
+  width: 22px;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+.green {
+  background-color: green;
+}
+
+.brown {
+  background-color: brown;
+}
+
+/* PRODUCT DETAILS */
+
+.product-details {
+  margin-top: 20px;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+}
+
 .details-title {
+  text-transform: uppercase;
   font-size: 16px;
   margin-bottom: 15px;
-  text-transform: uppercase;
 }
 
 .details-list {
@@ -73,80 +149,21 @@ body {
   margin-bottom: 10px;
 }
 
-/* Button */
+/* BUTTON */
 
 .add-cart {
   background-color: black;
   border: none;
-  border-top: 4px solid black;
   color: white;
-  cursor: pointer;
   font-size: 20px;
-  padding: 15px;
   text-transform: uppercase;
+  cursor: pointer;
+  padding: 15px;
   width: 100%;
+  border-top: 4px solid black;
 }
 
 .add-cart:hover {
-  background-color: white;
   color: black;
-}
-
-/* Challenge #3 */
-
-.sale {
-  background-color: red;
-  color: white;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 5px 10px;
-  letter-spacing: 2px;
-  position: absolute;
-  top: -14px;
-  left: -32px;
-}
-
-.color {
-  padding: 10px;
-  margin-right: 10px;
-  display: inline-block;
-}
-
-.black {
-  background-color: black;
-}
-.blue {
-  background-color: blue;
-}
-.red {
-  background-color: red;
-}
-.yellow {
-  background-color: yellow;
-}
-.green {
-  background-color: green;
-}
-.brown {
-  background-color: brown;
-}
-
-/* Challenge #4 */
-
-.product-img {
-  float: left;
-}
-
-.product-info {
-  float: left;
-  width: 243px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-top: 20px;
-}
-
-.product-details {
-  float: left;
-  width: 243px;
-  margin-top: 20px;
+  background-color: white;
 }
