--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -23,7 +23,6 @@ body {
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
-  margin-bottom: 60px;
 }
 
 nav {
@@ -31,7 +30,6 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
 }
 
 .post-header {
@@ -275,7 +273,7 @@ footer p {
   margin-bottom: 5px;
 }
 
-.row {
+/* .row {
   display: flex;
   gap: 75px;
   margin-bottom: 60px;
@@ -289,4 +287,29 @@ article {
 
 aside {
   flex: 0 0 300px;
+} */
+
+/* CSS GRID LAYOUT */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  /* grid-template-rows: auto 500px 1500px auto; */
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1 / span 2;
+}
+
+article {
+}
+
+aside {
+}
+
+footer {
+  grid-column: 1/-1;
 }
