--- a/starter/02-HTML-Fundamentals/challenge2/style.css
+++ b/starter/02-HTML-Fundamentals/challenge2/style.css
@@ -9,16 +9,16 @@ body {
   line-height: 1.4;
 }
 
-clearfix::after {
+/* clearfix::after {
   content: '';
   display: block;
   clear: both;
-}
+} */
 
-.container {
+/* .container {
   display: flex;
   gap: 40px;
-}
+} */
 
 /* PRODUCT */
 
@@ -166,4 +166,18 @@ clearfix::after {
 .add-cart:hover {
   color: black;
   background-color: white;
+}
+
+.product {
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
+}
+
+.product-title {
+  grid-column: 1/-1;
+}
+
+.add-cart {
+  grid-column: 1/-1;
 }
