--- a/starter/06-Components/style.css
+++ b/starter/06-Components/style.css
@@ -8,46 +8,58 @@ body {
   font-family: 'inter', sans-serif;
   color: #343a40;
   line-height: 1;
+  display: flex;
+  justify-content: center;
 }
 
-img {
-  height: 200px;
-  border-radius: 8px;
-  transform: scale(1.5);
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
-}
-
-.carousel {
-  width: 800px;
-  margin: 100px auto;
-  background-color: #087f5b;
-  padding: 32px;
-  padding-left: 86px;
-  border-radius: 8px;
+.container {
+  margin-top: 100px;
 
   display: flex;
   align-items: center;
-  gap: 86px;
+  justify-content: center;
+  gap: 12px;
 }
 
-.testimonial {
-}
-
-.testimonial-text {
+a.btn-link:link,
+a.btn-link:visited,
+a.btn-link:hover,
+a.btn-link:active {
+  text-decoration: none;
   font-size: 18px;
   font-weight: 500;
-  line-height: 1.5;
-  margin-bottom: 32px;
-  color: #e6fcf5;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.testimonial-author {
-  font-size: 14px;
-  margin-bottom: 4px;
-  color: #e6fcf5;
+a.btn-link:hover,
+a.btn-link:active,
+.btn:hover {
+  background-color: #087f5b;
+  color: #fff;
 }
 
-.testimonial-job {
-  font-size: 12px;
-  color: #e6fcf5;
+/* a:focus{
+} */
+
+.btn {
+  height: 40px;
+  width: 40px;
+  border: 1px solid #087f5b;
+  border-radius: 50%;
+}
+
+.btn-icon {
+  height: 24px;
+  width: 24px;
+  stroke: #087f5b;
+}
+
+.btn-icon:hover {
+  stroke: #fff;
 }
