--- a/starter/07-Omnifood-Desktop/css/style.css
+++ b/starter/07-Omnifood-Desktop/css/style.css
@@ -7,9 +7,14 @@
 
 - Font weights
 Default: 400
+Medium: 500
+Semi-bold: 600
+Bold: 700
 
 - Line heights
 Default: 1
+Small: 1.05
+Paragraph default: 1.6
 
 --- 02 COLORS
 
@@ -28,6 +33,8 @@ Default: 1
 --- 05 SHADOWS
 
 --- 06 BORDER RADIUS
+
+Default: 9px
 
 --- 07 WHITESPACE
 
@@ -49,18 +56,31 @@ body {
   color: #555;
 }
 
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
+/********************************/
+/* GENERAL REUSEABLE COMPONENTS */
+/********************************/
+
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
 }
 
-.hero {
-  max-width: 130rem;
-  margin: 0 auto;
+.grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 9.6rem;
-  align-items: center;
+}
+
+.grid-2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-4-cols {
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .heading-primary {
@@ -70,12 +90,6 @@ body {
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4.8rem;
 }
 
 .btn:link,
@@ -118,14 +132,99 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
-.hero-img {
-  width: 100%;
-}
-
 /* !important keyword for helper classes is good practice */
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+/**********************/
+/* HEADER             */
+/**********************/
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  /* Fixed height instead of padding since it will be sticky later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.logo {
+  height: 2rem;
+}
+
+/**********************/
+/* NAVIGATION         */
+/**********************/
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+/* The AND (.) selector is used to increase specificity */
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+}
+
+/**********************/
+/* HERO SECTION       */
+/**********************/
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.hero-img {
+  width: 100%;
 }
 
 .delivered-meals {
@@ -159,4 +258,13 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/**********************/
+/* HOW SECTION        */
+/**********************/
+
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
 }
