--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -43,6 +43,7 @@ Paragraph default: 1.6
 --- 06 BORDER RADIUS
 
 Default: 9px
+MEdium: 11px
 
 --- 07 WHITESPACE
 
@@ -172,4 +173,8 @@ body {
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+strong {
+  font-weight: 500;
 }
