--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -80,6 +80,18 @@ body {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+
+  /* margin-bottom: 9.6rem; */
+}
+
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
+
+/* To create space between multiple grids inside a section, ie. adding margin-bottom to any grid that is not the last child in a section */
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
 .grid-2-cols {
@@ -88,6 +100,10 @@ body {
 
 .grid-3-cols {
   grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-4-cols {
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .grid-center-v {
@@ -197,7 +213,7 @@ body {
   margin-bottom: 4.8rem !important;
 }
 
-.center-text{
+.center-text {
   text-align: center;
 }
 
