--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -27,8 +27,11 @@ Paragraph default: 1.6
 - Tints:
 #fdf2e9
 #fae5d3
+#eb984e
 
-- Shades: #cf711f
+- Shades:
+#cf711f
+#45260a
 - Accents:
 - Greys
 #6f6f6f (Lightest grey allowed on #fdf2e9)
@@ -40,6 +43,8 @@ Paragraph default: 1.6
 --- 04 ICONS
 
 --- 05 SHADOWS
+
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 06 BORDER RADIUS
 
@@ -146,6 +151,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -154,6 +160,11 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px; /* Not in rem */
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit; /* Is this needed? */
 
   /* Put transition on original "state" */
   transition: all 0.3s;
@@ -186,6 +197,18 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.btn-form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end; /* Only for this item */
+  padding: 1.2rem; /* Same padding as .cta-form input/select */
+}
+
+.btn-form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
 /* !important keyword for helper classes is good practice */
 
 .link:link,
@@ -202,6 +225,33 @@ body {
 .link:active {
   color: #cf711f;
   border-bottom: 1px solid transparent; /* Removing the border completely will cause the webpage to "jump" by 1px */
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
+*:focus {
+  outline: none; /* Never do this alone */
+
+  /* Trick instead of using outline */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
