--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -34,6 +34,7 @@ Paragraph default: 1.6
 #45260a
 - Accents:
 - Greys
+#767676 (Lightest grey allowed on #fff)
 #6f6f6f (Lightest grey allowed on #fdf2e9)
 #555
 #333
@@ -109,6 +110,10 @@ body {
 
 .grid-4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+
+.grid-5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .grid-center-v {
