--- a/starter/08-Omnifood-Responsive/css/style.css
+++ b/starter/08-Omnifood-Responsive/css/style.css
@@ -11,6 +11,7 @@
   /* Because we want header to be sticky later */
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -25,7 +26,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
@@ -54,6 +55,33 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
+}
+
+/* MOBILE */
+
+.btn-mobile-nav {
+  border: none;
+  background: none; /* Not background-color */
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+/*
+<button class="btn-mobile-nav">
+  <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+  <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+</button>
+*/
+
+.icon-mobile-nav[name='close-outline'] {
+  display: none;
 }
 
 /**************************/
@@ -177,7 +205,7 @@
 
 .step-img-box::before,
 .step-img-box::after {
-  content: "";
+  content: '';
   display: block;
   border-radius: 50%;
   position: absolute;
@@ -334,6 +362,10 @@
   color: #6f6f6f;
 }
 
+/*******************/
+/* GALLERY SECTION */
+/*******************/
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -356,7 +388,7 @@
 }
 
 /**************************/
-/* MEALS SECTION */
+/* PRICING SECTION */
 /**************************/
 
 .section-pricing {
@@ -383,7 +415,7 @@
 }
 
 .princing-plan--complete::after {
-  content: "Best value";
+  content: 'Best value';
   position: absolute;
   top: 6%;
   right: -18%;
@@ -509,7 +541,7 @@
       rgba(235, 151, 78, 0.35),
       rgba(230, 125, 34, 0.35)
     ),
-    url("../img/eating.jpg");
+    url('../img/eating.jpg');
   background-size: cover;
   background-position: center;
 }
