--- a/starter/08-Omnifood-Responsive/css/queries.css
+++ b/starter/08-Omnifood-Responsive/css/queries.css
@@ -173,6 +173,81 @@
     }
   }
 
+  /*********************************/
+  /* BELOW 34*16 = 544 px (phones) */
+  /*********************************/
+
+  @media (max-width: 34em) {
+    .grid {
+      row-gap: 4.8rem;
+    }
+    .grid--2-cols,
+    .grid--3-cols,
+    .grid--4-cols {
+      grid-template-columns: 1fr;
+    }
+
+    .btn,
+    .btn:link,
+    .btn:visited {
+      padding: 2.4rem 1.6rem;
+    }
+    .section-hero {
+      background-color: #fdf2e9;
+      padding: 2.4rem 0 6.4rem 0;
+    }
+
+    .hero {
+      padding: 0 3.2rem;
+    }
+
+    .hero-img {
+      width: 80%;
+    }
+
+    .logos img {
+      height: 1.2rem;
+    }
+
+    /* Making sure images appear first in the how section */
+
+    .step-img-box:nth-child(2) {
+      grid-row: 1;
+    }
+
+    .step-img-box:nth-child(6) {
+      grid-row: 5;
+    }
+
+    /* The rest */
+
+    .step-img-box {
+      transform: translateY(2.4rem);
+    }
+
+    .testimonials {
+      grid-template-columns: 1fr;
+    }
+
+    .gallery {
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1.2rem;
+    }
+
+    .cta {
+      grid-template-columns: 1fr;
+    }
+
+    .cta-img-box {
+      height: 32rem;
+      grid-row: 1;
+    }
+
+    .cta-text-box {
+      padding: 3.2rem;
+    }
+  }
+
   /* MOBILE NAVIGATION */
 
   .btn-mobile-nav {
